[package]
name = "rumdump"
version = "0.1.0"
edition = "2021"
description = "A simple object file dumper for the UM (ICFP 2006) 14-instruction architecture"
license = "MIT"
repository = "https://github.com/CSC411TA/rumdump"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
ansi_term = "0.12.1"
